--- a/authors.html
+++ b/authors.html
@@ -55,7 +55,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-          <li ><a href="/category/web.html">web</a></li>
+          <li ><a href="/category/web.html">Web</a></li>
           <li ><a href="/category/suo-sui.html">琐碎</a></li>
           <li ><a href="/category/ssh.html">SSH</a></li>
           <li ><a href="/category/golang.html">Golang</a></li>
@@ -82,7 +82,7 @@
             -->
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (16)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (17)</li>
     </ul>
         </div>
         <div class="push"></div>
