--- a/tags.html
+++ b/tags.html
@@ -55,7 +55,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-          <li ><a href="/category/web.html">web</a></li>
+          <li ><a href="/category/web.html">Web</a></li>
           <li ><a href="/category/suo-sui.html">琐碎</a></li>
           <li ><a href="/category/ssh.html">SSH</a></li>
           <li ><a href="/category/golang.html">Golang</a></li>
@@ -88,13 +88,15 @@
 	<li><a href="/tag/config.html">config</a></li>
 	<li><a href="/tag/work.html">work</a></li>
 	<li><a href="/tag/programming.html">Programming</a></li>
-	<li><a href="/tag/agent.html">Agent</a></li>
-	<li><a href="/tag/blog.html">blog</a></li>
+	<li><a href="/tag/chrome-extension.html">Chrome-Extension</a></li>
+	<li><a href="/tag/js.html">js</a></li>
 	<li><a href="/tag/golang.html">Golang</a></li>
 	<li><a href="/tag/tunnel.html">tunnel</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/ssh.html">SSH</a></li>
+	<li><a href="/tag/agent.html">Agent</a></li>
 	<li><a href="/tag/linux.html">Linux</a></li>
+	<li><a href="/tag/blog.html">blog</a></li>
 	<li><a href="/tag/tips.html">tips</a></li>
 	<li><a href="/tag/wireshark.html">wireshark</a></li>
 	<li><a href="/tag/auth.html">Auth</a></li>
