--- a/draft/golang-muls.html
+++ b/draft/golang-muls.html
@@ -161,7 +161,7 @@ $(document)
               <div class="content">
                   <a href="/about.html" class="header">nullne</a>
                   <div class="meta">
-                      <span class="date">Jul 5, 2016</span>
+                      <span class="date">Jul 7, 2016</span>
                   </div>
               </div>
               <div class="extra content">
@@ -284,6 +284,16 @@ gapi.comments.render('comments', {
     view_type: 'FILTERED_POSTMOD'
 });
 $('#gfw').remove()
+
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51420901-1', 'auto');
+  ga('send', 'pageview');
 
 </script>
 </body>
